--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -256,22 +256,13 @@
 //Sticky Navbar
 
 .sticky-nav {
-  padding: $base-padding $base-padding * 2 !important;
+  padding-top: $base-padding * 0.75 !important;
+  padding-bottom: $base-padding * 0.75 !important;
   background: $color-white;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
   z-index: 1000;
 }
 
-@include media-breakpoint-down-lg {
-  .sticky-nav {
-    padding: $base-padding * 1.5 !important;
-  }
-}
-@include media-breakpoint-down-sm {
-  .sticky-nav {
-    padding: $base-padding * 1 $base-padding * 0 !important;
-  }
-}
 /**
  * Note: I have omitted any vendor-prefixes for clarity.
  * Adding them is left as an exercise for the reader.
