--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const canonicalURL = new URL(seo?.canonical_url ?? Astro.url.pathname, baseUrl);
 ---
 
 <!DOCTYPE html>
-<html lang="en" transition:animate={fade({ duration: 500 })}>
+<html lang="en">
   <head>
     <ViewTransitions />
     <meta charset="UTF-8" />
