--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -83,7 +83,7 @@
     padding-left: $base-padding !important;
     display: flex;
     align-items: center;
-    font-weight: $regular-font-weight;
+    font-weight: $medium-font-weight;
     font-size: $base-font-size * 1.1;
     line-height: 18px;
     z-index: 9;
