--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -294,17 +294,16 @@
 .navbar-toggler[aria-expanded="true"] .navbar-toggler-toggled {
   display: flex;
   position: absolute;
-  bottom: 0;
-  left: 50px;
-  background: $color-header;
-  color: $color-white;
+  bottom: 20px;
+  left: 28px;
+  background: #000;
+  color: #fff;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   align-items: center;
   line-height: 60px;
   justify-content: center;
-  margin-bottom: 50px;
   @include media-breakpoint-down-sm {
     .sticky-nav {
       left: 25px;
