--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -43,8 +43,10 @@ const posts = await getCollection("blog");
         <div class="col-lg-12">
           <article class="blog-single">
             <div class="inner-blog-details">
-              <h2 class="w-xxl-70 w-xl-80 w-100">{title}</h2>
-              <div class="inner-blog-details-meta">
+              <h2 class="mx-auto text-center w-xxl-70 w-xl-80 w-100">
+                {title}
+              </h2>
+              <div class="text-center inner-blog-details-meta">
                 <ul class="list-unstyled">
                   <li class="list-inline-item">
                     <p>
